이미지 업로드

--- a/src/resources/scss/index.scss
+++ b/src/resources/scss/index.scss
@@ -204,13 +204,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 540px;
-    height: 250px;
+    width: 530px;
+    height: 360px;
     border: 1px solid #d1d1d1;
     text-align: center;
+    overflow: hidden;
     img {
       display: block;
-      width: 540px;
+      max-width: 100%;
     }
   }
   .text-box {
