--- a/src/resources/scss/index.scss
+++ b/src/resources/scss/index.scss
@@ -55,6 +55,7 @@
   }
   span {
     color: #3bc5b0;
+    text-shadow: 1px 1px 4px #ddd;
   }
   .etc {
     font-family: 'NanumSquare';
@@ -86,7 +87,7 @@
       justify-content: flex-end;
       img {
         display: block;
-        width: 200px;
+        width: 400px;
       }
     }
     .user-name {
