--- a/src/resources/scss/index.scss
+++ b/src/resources/scss/index.scss
@@ -269,10 +269,22 @@ $point-color: #2c8fe3;
     letter-spacing: -0.2px;
   }
   .url {
+    display: flex;
+    align-items: center;
     margin-top: 20px;
-    a {
+    .type {
       display: inline-block;
+      padding: 5px 7px;
+      font-weight: bold;
+      font-size: 14px;
+      color: #fff;
+      background-color: #222;
+    }
+    .link {
+      display: inline-block;
+      margin-left: 12px;
       border-bottom: 1px solid #ddd;
+      cursor: pointer;
       font-size: 14px;
       color: #999;
     }
